welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:3: error: an expression of type Null is ineligible for implicit conversion
  var max: Int = null
                 ^indexOfMaxValue:3: error: type mismatch;
 found   : Null(null)
 required: Int
  var max: Int = null
                 ^