welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = { 
  var ind: Int = 0
  var max: Int = null
  for (i <- 0 to nums.length-1) {
    if (nums(i)>max) {
      max=nums(i)
      ind=i
    }
  } 
  return ind
}